--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@babel/core": "^7.2.0",
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^4.12.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-import-resolver-babel-module": "^5.0.0-beta",
+    "eslint-plugin-import": "^2.14.0",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
