--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "watch": "nodemon --exec babel-node ./src/index.js",
-    "watch:debug": "nodemon --inspect --exec babel-node ./src/index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js",
+    "dev:debug": "nodemon --inspect --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist --source-maps --verbose",
     "build:watch": "npm run build -- --watch",
     "prebuild": "rm -rf dist"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.0",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
     "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "babel-plugin-module-resolver": "^3.1.1",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-babel-module": "^5.0.0-beta",
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "nodemon": "^1.18.7"
+    "nodemon": "^2.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.15"
   }
 }
