--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "dev": "nodemon --exec babel-node ./src/index.js",
-    "dev:debug": "nodemon --inspect --exec babel-node ./src/index.js",
     "build": "babel src --out-dir dist --source-maps --verbose",
     "build:watch": "npm run build -- --watch",
-    "prebuild": "rm -rf dist"
+    "dev": "nodemon --exec babel-node ./src/index.js",
+    "dev:debug": "nodemon --inspect --exec babel-node ./src/index.js",
+    "lint": "eslint '**/*.{js,jsx}'",
+    "lint:fix": "eslint --fix '**/*.{js,jsx}'",
+    "lint:check": "eslint --print-config server.js | eslint-config-prettier-check",
+    "prebuild": "rm -rf dist",
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
@@ -29,9 +32,12 @@
     "babel-plugin-module-resolver": "^3.1.1",
     "eslint": "^6.7.1",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-import-resolver-babel-module": "^5.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "nodemon": "^2.0.1"
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "nodemon": "^2.0.1",
+    "prettier": "^1.19.1"
   },
   "dependencies": {
     "lodash": "^4.17.15"
